--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <EditText
@@ -12,7 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:background="@drawable/et_bg"
+        android:padding="16dp"
         android:hint="Username"
+        android:textColorHint="@color/login_form_details"
+        android:textColor="@color/login_form_details"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +31,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:background="@drawable/et_bg"
+        android:padding="16dp"
         android:hint="Password"
+        android:textColorHint="@color/login_form_details"
+        android:textColor="@color/login_form_details"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="Login"
+        android:textColor="@color/login_form_details_medium"
+        android:background="@drawable/btn_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -51,10 +62,23 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="149dp"
         android:text="Number of Attempts Left:"
+        android:textColor="@color/login_form_details"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.467" />
+
+    <ImageView
+        android:id="@+id/movieLogo"
+        android:layout_width="95dp"
+        android:layout_height="149dp"
+        app:layout_constraintBottom_toTopOf="@+id/etName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/movie" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
