--- a/app/src/main/res/layout/activity_movie_poster.xml
+++ b/app/src/main/res/layout/activity_movie_poster.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MoviePoster">
 
     <WebView
@@ -31,6 +32,8 @@
         android:layout_marginEnd="307dp"
         android:layout_marginRight="307dp"
         android:text="Back"
+        android:textColor="@color/login_form_details_medium"
+        android:background="@drawable/btn_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
