--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".SecondActivity">
 
     <EditText
@@ -13,6 +14,8 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:hint="Enter a Movie Name..."
+        android:textColorHint="@color/login_form_details"
+        android:textColor="@color/login_form_details"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@android:string/search_go"
+        android:textColor="@color/login_form_details_medium"
+        android:background="@drawable/btn_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -85,6 +90,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Poster"
+        android:textColor="@color/login_form_details_medium"
+        android:background="@drawable/btn_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTime" />
@@ -95,6 +102,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Favorite"
+        android:textColor="@color/login_form_details_medium"
+        android:background="@drawable/btn_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
