Search Error / List Style

--- a/app/src/main/res/layout/activity_favorite_list.xml
+++ b/app/src/main/res/layout/activity_favorite_list.xml
@@ -9,39 +9,28 @@
     android:background="@drawable/background"
     tools:context=".FavoriteList">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Favorite Movies List"
-            android:textStyle="bold"
-            android:textColor="@color/login_form_details"
-            android:textSize="30dp" />
-    </RelativeLayout>
-
-
-    <LinearLayout
-        android:layout_width="211dp"
+    <TextView
+        android:id="@+id/tvHeader"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:orientation="horizontal">
+        android:gravity="center"
+        android:text="Favorite Movies List"
+        android:textStyle="bold"
+        android:textColor="@color/login_form_details"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30dp" />
 
-        <Button
-            android:id="@+id/btnBack2"
-            android:layout_width="126dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="@drawable/btn_bg"
-            android:text="Back"
-            android:textColor="@color/login_form_details_medium" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnBack2"
+        android:layout_width="126dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/btn_bg"
+        android:text="Back"
+        android:textColor="@color/login_form_details"
+        app:layout_constraintTop_toBottomOf="@id/tvHeader" />
 
     <ListView
         android:id="@+id/lvFavorite"
