--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,14 +29,14 @@
 
     <ImageView
         android:id="@+id/movieLogo"
-        android:layout_width="92dp"
-        android:layout_height="116dp"
+        android:layout_width="180dp"
+        android:layout_height="212dp"
         app:layout_constraintBottom_toTopOf="@id/etName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvHeader"
-        app:srcCompat="@drawable/movie" />
+        app:srcCompat="@drawable/moviemania" />
 
     <EditText
         android:id="@+id/etName"
