--- a/app/src/main/res/layout/activity_movie_poster.xml
+++ b/app/src/main/res/layout/activity_movie_poster.xml
@@ -11,14 +11,10 @@
     <WebView
         android:id="@+id/wvPoster"
         android:layout_width="410dp"
-        android:layout_height="647dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="633dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnBack" />
 
@@ -26,15 +22,13 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="307dp"
-        android:layout_marginRight="307dp"
+        android:background="@drawable/btn_bg"
         android:text="Back"
         android:textColor="@color/login_form_details"
-        android:background="@drawable/btn_bg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
