--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     tools:context=".MainActivity">
-
-
+<!--
     <TextView
         android:id="@+id/tvHeader"
         android:layout_width="match_parent"
@@ -26,23 +25,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+-->
     <ImageView
         android:id="@+id/movieLogo"
-        android:layout_width="180dp"
-        android:layout_height="212dp"
+        android:layout_width="247dp"
+        android:layout_height="301dp"
         app:layout_constraintBottom_toTopOf="@id/etName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvHeader"
-        app:srcCompat="@drawable/moviemania" />
+        app:srcCompat="@drawable/moviemaniabright" />
 
     <EditText
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/et_bg"
         android:ems="10"
         android:hint="Username"
