Final UI and Code Improvements

--- a/app/src/main/res/layout/activity_favorite_list.xml
+++ b/app/src/main/res/layout/activity_favorite_list.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="8dp"
         android:text="Favorite Movies List"
         android:textStyle="bold"
         android:textColor="@color/login_form_details"
@@ -28,6 +29,7 @@
         android:layout_width="126dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="8dp"
         android:background="@drawable/btn_bg"
         android:text="Back"
         android:textColor="@color/login_form_details"
