--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:background="@drawable/et_bg"
         android:ems="10"
         android:hint="Username"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:padding="16dp"
         android:textColor="@color/login_form_details"
         android:textColorHint="@color/login_form_details"
